# signalforge

./: .dockerignore  .env.example  .gitignore  ABOUT.md  Dockerfile  FINAL_COMPREHENSIVE_REVIEW.md  FINAL_REVIEW.md  LEARNING.md  LICENSE  QUICKSTART.md  README.md  REVIEW.md  WEBSITE_UPDATE_COMPLETE.md  detect_files.py  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements.txt
.streamlit/: config.toml
data/: sample_customers.csv
data/processed/: feature_metadata.json  features.csv  features.parquet
data/raw/: WA_Fn_UseC_Telco_Customer_Churn.csv
docs/: DATASETS.md  DEPLOYMENT.md  FEATURES.md  JANE_STREET_REVIEW.md  JANE_STREET_TAKEAWAYS.md  MODEL_RESULTS.md  SETUP.md  SIGNALFORGE_PROJECT_PAGE.html  STREAMLIT_DEPLOYMENT.md  WEBSITE_HOMEPAGE_UPDATE.md  WEBSITE_UPDATE.md  WEBSITE_UPDATE_FINAL.md  WEBSITE_UPDATE_INSTRUCTIONS.md
infrastructure/sql/: 01_schema.sql
models/: model_comparison.csv
models/artifacts/: feature_names.json  gradient_boosting.pkl  logistic_regression.pkl  model_comparison.csv  scaler.pkl  training_results.json
notebooks/: 01_eda_telco.ipynb
reports/: EDA_FINDINGS.md
scripts/: advanced_model_analysis.py  download_real_data.py  engineer_features.py  engineer_real_features.py  feature_summary.py  generate_data.py  generate_data_quick.py  generate_synthetic_data.py  process_real_data.py  quick_eda.py  quickstart.py  setup_database.py  train_and_save.py  train_model.py  train_with_optuna.py
src/: __init__.py
src/app/: dashboard.py  dashboard_demo.py
tests/: test_signalforge.py
